start-microfrontends/k8s/qa/crt-microfront/crt-microfront-service-qa.yaml
# Expose the deployment using a Service
apiVersion: v1
kind: Service
metadata:
  name: modulefederation-crt-microfront-service-dev
spec:
  selector:
    app: modulefederation-crt-microfront-dev
  ports:
    - protocol: TCP
      port: 4222
      targetPort: 80
  type: NodePort
