start-microfrontends/k8s/qa/crt-microfront/crt-microfront-ingress-qa.yaml
# Create Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: modulefederation-crt-microfront-ingress-qa
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: frontqa.v30.cloud-ultrasist.net
    http:
      paths:
      - path: /crt(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: modulefederation-crt-microfront-service-qa
            port:
              number: 4222
  tls:
  - hosts:
    - frontqa.v30.cloud-ultrasist.net
    secretName: v30certs-qa
